Search Word component

--- a/src/components/SearchWord/SearchWord.module.scss
+++ b/src/components/SearchWord/SearchWord.module.scss
@@ -1,5 +1,9 @@
 @import '../../styles/mixins';
 
-.random-word-wrapper {
+.section-wrapper {
   @include section-styles;
+}
+
+.form {
+  @include form-styles;
 }
