--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './styles/variables', './styles/mixins';
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -21,7 +23,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: $accent-color;
   text-decoration: inherit;
 }
 a:hover {
