--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@ a {
   font-weight: 500;
   color: $accent-color;
   text-decoration: inherit;
+  word-break: break-all;
 }
 a:hover {
   color: #535bf2;
